src/test/ui/consts/const-err-early.stderr
error: any use of this value will cause an error
  --> $DIR/const-err-early.rs:3:19
   |
LL | pub const A: i8 = -std::i8::MIN;
   | ------------------^^^^^^^^^^^^^-
   |                   |
   |                   attempt to negate with overflow
   |
note: lint level defined here
  --> $DIR/const-err-early.rs:1:9
   |
LL | #![deny(const_err)]
   |         ^^^^^^^^^

error: any use of this value will cause an error
  --> $DIR/const-err-early.rs:4:19
   |
LL | pub const B: u8 = 200u8 + 200u8;
   | ------------------^^^^^^^^^^^^^-
   |                   |
   |                   attempt to add with overflow

error: any use of this value will cause an error
  --> $DIR/const-err-early.rs:5:19
   |
LL | pub const C: u8 = 200u8 * 4;
   | ------------------^^^^^^^^^-
   |                   |
   |                   attempt to multiply with overflow

error: any use of this value will cause an error
  --> $DIR/const-err-early.rs:6:19
   |
LL | pub const D: u8 = 42u8 - (42u8 + 1);
   | ------------------^^^^^^^^^^^^^^^^^-
   |                   |
   |                   attempt to subtract with overflow

error: any use of this value will cause an error
  --> $DIR/const-err-early.rs:7:19
   |
LL | pub const E: u8 = [5u8][1];
   | ------------------^^^^^^^^-
   |                   |
   |                   index out of bounds: the len is 1 but the index is 1

error: aborting due to 5 previous errors

